# protocol

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  vcpkg.json
src/: xml_util_constants.h
src/pb2xml/: rapidxml_ext.h  xmlOptions.proto  xml_format.cc  xml_format.h
src/proto/: test.proto
src/xml2pb/: xml_util.cpp  xml_util.h
test/: CMakeLists.txt  gen.sh
test/py/: addressbook_xml.py
test/src/: addressbook_xml.py  main.cpp
test/src/proto/: berchtold.proto  test.proto
